[project]
name = "sasolver"
description = "SASolver for Comfyui. Adapted from [a/comfyanonymous/ComfyUI#4454](https://github.com/comfyanonymous/ComfyUI/pull/4454) and [a/https://github.com/Koishi-Star/Euler-Smea-Dyn-Sampler](https://github.com/Koishi-Star/Euler-Smea-Dyn-Sampler)"
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/mira-6/comfyui-sasolver"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "mirav"
DisplayName = "comfyui-sasolver"
Icon = ""
